--- a/styles/containers/product-details-card.scss
+++ b/styles/containers/product-details-card.scss
@@ -1,11 +1,13 @@
 @use '../constants/colors' as *;
+@use '../constants/_breakpoints.scss' as *;
+@use '../mixins/_media-queries.scss';
 
 $square-image-dimensions: 350px; 
 
 .details-container {
   background-color: $white;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 32px;
   padding: 32px; /* TODO */
 }
@@ -13,12 +15,18 @@ $square-image-dimensions: 350px;
 .details-main {
   display:flex;
   flex-direction: column;
+
+  @include media-queries.respond-to($medium-screen){
+    flex-direction: row;    
+  }
 }
 
 .image-container {
   display: flex;
   position: relative;
   height: $square-image-dimensions;
+  width: 50vw;
+  align-self: center;
   > img {
     object-fit: contain;
   }
@@ -39,19 +47,49 @@ $square-image-dimensions: 350px;
 .details-action {
   flex: 2;
   > span {
-    font-size: 14px; /* TODO */
-    margin-bottom: 16px; /* TODO */
+    color: $secondary-gray;
+    font-size: 3vw; 
+    margin-bottom: 16px; 
+    text-transform: capitalize;
   }
   > h1 {
-    font-size: 24px; /* TODO */
+    font-size: 4vw; 
     font-weight: bold;
     line-height: 1.2;
-    margin-bottom: 10px; /* TODO */
-    width: 275px;
+    margin-bottom: 10px;
   }
   > h2 {
-    font-size: 46px; /* TODO */
+    font-size: 8vw; 
     font-weight: bold;
     margin-bottom: 14px;
+  }
+
+  @include media-queries.respond-to($medium-screen){
+    flex: 1;
+
+    > span {
+      font-size: 2vw;
+    }
+
+    > h1 {
+      font-size: 3vw;
+    }
+
+    > h2 {
+      font-size: 5vw;
+    }   
+  }
+
+  @include media-queries.respond-to($large-screen){
+    > h1 {
+      font-size: 25px;
+    }
+
+    > h2 {
+      font-size: 45px;
+    }
+    > span {
+      font-size: 20px;
+    }
   }
 }
